<resources>
    <string name="app_name">Estou Lendo</string>
    <string name="total_of_books">Livros Totais</string>
    <string name="finished_books">Livros Finalizados</string>
    <string name="books_left">Restantes</string>
    <string name="textview_totalPages">Paginas Totais</string>
    <string name="left_pages">Restantes</string>
    <string name="total_lists">Livros</string>
    <string name="read_pages">Paginas Lidas</string>
    <string name="Add_list_title">De um Nome a sua Lista</string>
    <string name="add_button">Adicionar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="book_title">Titulo:</string>
    <string name="book_author">Autor:</string>
    <string name="current_book_list">Categoria:</string>
    <string name="pages_number">Total de Paginas:</string>
    <string name="current_page">Pagina Atual:</string>
    <string name="read_pages_bookmenu">Paginas Lidas:</string>
    <string name="leaft_pages">Paginas Restantes:</string>
    <string name="list_name">Nome da Lista</string>
    <string name="addlist_floatingbutton">AddList</string>
    <string name="zero_defaultValue">0</string>
    <string name="progress_percentage_defaultvalue">0%</string>
    <string name="addbookfloatingbutton_description">AddBookFloatingButton</string>
    <string name="bookimage_description">BookImage</string>
    <string name="Save_Button">Salvar</string>
    <string name="button_save">SALVAR</string>
    <string name="delete">deletar</string>
    <string name="finalizados">Finalizados</string>
    <string name="atuais">Atuais</string>
    <string name="wishlist">WishList</string>
    <string name="atuais_wishlist">Atuais</string>
    <string name="finalizados_wishlist">Finalizados</string>
    <string name="voltar_wishlist">Voltar</string>
    <string name="read_button">Ler</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="lembretes">Lembretes</string>
    <string name="wishListSubTitle">Total de Livros:</string>
</resources>