<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/BookImageWishList"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#03A9F4"
                android:clickable="true"
                android:contentDescription="@string/bookimage_description"
                android:focusable="true" />

            <EditText
                android:id="@+id/editTextBookTitleWishList"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/book_title"
                android:inputType="text"
                android:maxHeight="70dp"
                android:textSize="22sp" />


            <EditText
                android:id="@+id/editTextBookAuthorWishList"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="79dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/book_author"
                android:inputType="text"
                android:maxHeight="70dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTotalPagesWishList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="132dp"
                android:layout_marginTop="138dp"
                android:fontFamily="sans-serif"
                android:text="@string/pages_number"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTotalPagesValueWishList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="138dp"
                android:layout_toEndOf="@+id/textViewTotalPagesWishList"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/zero_defaultValue"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonReadBookWishList"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/read_button"
                android:textColor="#03A9F4" />

            <Button
                android:id="@+id/buttonCancelWishList"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cancel_button"
                android:textColor="#03A9F4" />

            <Button
                android:id="@+id/buttonDeleteWishList"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@+id/buttonReadBookWishList"
                android:layout_toEndOf="@+id/buttonCancelWishList"
                android:backgroundTint="#FFFFFF"
                android:text="@string/delete"
                android:textColor="#03A9F4" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="163dp" />


</androidx.constraintlayout.widget.ConstraintLayout>