<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="380dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/BookImage"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#03A9F4"
                android:clickable="true"
                android:contentDescription="@string/bookimage_description"
                android:focusable="true" />

            <EditText
                android:id="@+id/editTextBookTitle"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/book_title"
                android:inputType="text"
                android:maxHeight="70dp"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextBookAuthor"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/book_author"
                android:inputType="text"
                android:maxHeight="70dp"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textViewTotalPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="183dp"
                android:fontFamily="sans-serif"
                android:text="@string/pages_number"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTotalPagesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="183dp"
                android:layout_toEndOf="@+id/textViewTotalPages"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/zero_defaultValue"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewCurrentPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="221dp"
                android:fontFamily="sans-serif"
                android:text="@string/current_page"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextCurrentPageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="221dp"
                android:layout_toEndOf="@+id/textViewCurrentPage"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/zero_defaultValue"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLeftPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="260dp"
                android:fontFamily="sans-serif"
                android:text="@string/leaft_pages"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLeftPagesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="260dp"
                android:layout_toEndOf="@+id/textViewLeftPages"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/zero_defaultValue"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonAddBook"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/add_button"
                android:textColor="#03A9F4" />

            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cancel_button"
                android:textColor="#03A9F4" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>