<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4">



    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="180dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_title_addlist_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/Add_list_title"
                android:textAlignment="center"
                android:textColor="#4D4D4D"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edittext_listtitle_addlistscreen"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_add_addlist"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#FFFFFF"
                android:onClick="add"
                android:text="@string/add_button"
                android:textColor="#03A9F4" />

            <Button
                android:id="@+id/button_cancel_addlist"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cancel_button"
                android:textColor="#03A9F4"
                android:onClick="cancel"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>